Use express to serve static files(trivial)

--- a/web/about.html
+++ b/web/about.html
@@ -12,7 +12,7 @@
 
 <h1>About</h1>
 <p>
-	This is a really cool exercise that shows using Node to serve HTTP, with static file serving, and an API endpoint to retrieve database records as JSON.
+	This is a really cool exercise that shows using Node/express to serve HTTP, with static file serving, and an API endpoint to retrieve database records as JSON.
 </p>
 
 </body>
